# evee-manuscript

./: .gitignore  README.md  environment.yml  generate_all.py  pyproject.toml
artifacts/: context_ablation_eval.feather  context_window_auroc_diff.csv  context_window_clamped_vs_genomic.csv  context_window_per_consequence.csv  context_window_sweep.feather  dataset_characterization.feather  disruption_umap.feather  fig1a.csv  fig1c.csv  fig1c.feather  fig1d.csv  fig1d.feather  fig1f.csv  fig1f.feather  fig2_disrupt_auroc.csv  fig2_disrupt_auroc.feather  fig2a.csv  fig2b.csv  fig2c.csv  fig2e.csv  fig2e.feather  heads.feather  indel_stratified.feather  ksparse_benchmark.feather  layer_sweep_evo2_7b.csv  missense_conservation.feather  probe_auroc_data.feather  supfig2_deconf.csv  supfig2_deconf.feather  supfig2_naive.feather  supfig3.csv  supfig4.csv  supfig_autointerp_axes.feather  suptable1.csv  token_eval.json  topk_sweep_auc.csv  topk_sweep_auc.feather  topk_vs_window.feather  umap_combined.feather  umap_snv.feather  (+1 more)
artifacts/samples/: variants.feather
config/: __init__.py  mayo_theme.py  requirements.txt
evee_manuscript/: __init__.py  cli.py
notebooks/: demo_probe_inference.ipynb  demo_probe_inference.py
scripts/_archive/: fig1a_old.py  fig1b_old.py  fig1c_old.py  fig1d_old.py  fig1e_old.py  fig1f_old.py  fig2a_old.py
scripts/figure1/: _heatmap_common.py  _umap_common.py  assemble_figure1.py  fig1a.py  fig1b.py  fig1b_snv_heatmap.py  fig1c.py  fig1c_indel_heatmap.py  fig1d.py  fig1e.py  fig1f.py  (+11 more)
src/: cli.py
theme/: __init__.py  mayo_theme.py  theme.py
(+62 files in other folders)
